--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,34 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
+  bloc: ^8.1.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.1
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.0
+  local_storage_employee_api:
+    path: packages/local_storage_employee_api
+  employee_api:
+    path: packages/employee_api
+  employee_repository:
+    path: packages/employee_repository
 
 dev_dependencies:
+  bloc_test: ^9.1.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  mockingjay: ^0.3.0
+  mocktail: ^0.3.0
 
 flutter:
   uses-material-design: true
+  generate: true
+  assets:
+    - assets/
+
